--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -1,13 +1,30 @@
 .list {
-  list-style: circle;
-  margin-left: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  width: 1260px;
+  margin-left: 27px;
+  margin-bottom: 50px;
 }
-.item:not(:last-child) {
+.item {
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+/* .item:not(:last-child) {
   margin-bottom: 5px;
+} */
+.item:nth-child(4n + 4) {
+  margin-right: 0;
 }
 .link {
-  color: blue;
+  color: black;
+  font-size: 16px;
   text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-weight: bold;
+  font-style: italic;
 }
 
 .link:hover {
@@ -17,4 +34,5 @@
 .image {
   width: 300px;
   height: auto;
+  padding-top: 5px;
 }
