--- a/src/views/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/views/MovieDetailsPage/MovieDetailsPage.module.css
@@ -1,3 +1,11 @@
 .link {
   margin-right: 10px;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  color: #1ab4ff;
+}
+.link:hover {
+  text-decoration: underline;
+  color: #af5665;
 }
