--- a/src/components/MovieCard/MovieCard.module.css
+++ b/src/components/MovieCard/MovieCard.module.css
@@ -1,14 +1,13 @@
 .list {
   display: flex;
+  justify-content: flex-start;
   flex-wrap: wrap;
   list-style: none;
-  width: 1260px;
-  margin-left: 27px;
-  margin-bottom: 50px;
 }
 .item {
-  margin-right: 20px;
-  margin-bottom: 20px;
+  margin: 0 10px 20px;
+  width: 300px;
+  height: 473px;
 }
 /* .item:not(:last-child) {
   margin-bottom: 5px;
@@ -35,4 +34,14 @@
   width: 300px;
   height: auto;
   padding-top: 5px;
+}
+.div {
+  padding: 0 27px;
+  /* background-color: #3d3d3d;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
+    ),
+    url(../../img/moviesBg.jpg);
+  background-attachment: fixed; */
 }
