--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,14 @@
 body {
   font-family: "Roboto", sans-serif;
   font-style: normal;
+  /* background-color: #3d3d3d;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.8),
+      rgba(47, 48, 58, 0.8)
+    ),
+    url(./img/moviesBg.jpg);
+  background-attachment: fixed; */
+  /* padding: 20px; */
 }
 
 *:focus {
